--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      // document.getElementById('vid').play();
+    </script>
   </body>
 </html>
